@@ -1411,6 +1411,45 @@ class LibraryFunctions():
         self.loadedPlaylists = True
         return self.loadedPlaylists
                 
+    def scriptPlaylists( self ):
+        # Lazy loading of random source playlists auto-generated by the script
+        # (loaded lazily as these can be created/deleted after gui has loaded)
+        returnPlaylists = []
+        try:
+            log('Loading script generated playlists...')
+            path = "special://profile/addon_data/" + __addonid__ + "/"
+            count = 0
+            rootpath = xbmc.translatePath( path ).decode('utf-8')
+            for root, subdirs, files in os.walk( rootpath ):
+                for file in files:
+                    playlist = root.replace( rootpath, path )
+                    if not playlist.endswith( '/' ):
+                        playlist = playlist + "/"
+                    playlist = playlist + file
+                    playlistfile = os.path.join( root, file )
+                    
+                    if file.endswith( '-randomversion.xsp' ):
+                        contents = xbmcvfs.File(playlistfile, 'r')
+                        contents_data = contents.read().decode('utf-8')
+                        xmldata = xmltree.fromstring(contents_data.encode('utf-8'))
+                        for line in xmldata.getiterator():                               
+                            if line.tag == "name":
+                                    
+                                # Save it for the widgets list
+                                # TO-DO - Localize display name
+                                returnPlaylists.append( [playlist.encode( 'utf-8' ), "(Source) " + name, name] )
+                                
+                                count += 1
+                                break
+                        
+            log( " - [" + path[0] + "] " + str( count ) + " playlists found" )
+            
+        except:
+            log( "Failed to load script generated playlists" )
+            print_exc()
+            
+        return returnPlaylists
+                
     def favourites( self ):
         if self.loadedFavourites == True:
             # The List has already been populated, return it
@@ -1751,7 +1790,10 @@ class LibraryFunctions():
             log( repr( item ) )
         
         xmltree.SubElement( root, "name").text = name
-        xmltree.SubElement( root, "match").text = "one"
+        if negative == False:
+            xmltree.SubElement( root, "match").text = "one"
+        else:
+            xmltree.SubElement( root, "match").text = "all"
         
         for item in target:
             if negative == False:
@@ -1769,8 +1811,16 @@ class LibraryFunctions():
         while xbmcvfs.exists( os.path.join( __datapath__, str( id ) + ".xsp" ) ) :
             id += 1
                 
+        # Write playlist we'll link to the menu item
         DATA.indent( tree.getroot() )
         tree.write( os.path.join( __datapath__, str( id ) + ".xsp" ), encoding="utf-8" )
+        
+        # Add a random property, and save this for use in playlists/backgrounds
+        order = xmltree.SubElement( root, "order" )
+        order.text = "random"
+        DATA.indent( tree.getroot() )
+        tree.write( os.path.join( __datapath__, str( id ) + "-randomversion.xsp" ), encoding="utf-8" )
+        
         return str( id ) + ".xsp"
         
     def _delete_playlist( self, target ):
@@ -1782,6 +1832,7 @@ class LibraryFunctions():
                 if len( elements ) > 1:
                     if elements[1].startswith( "special://profile/addon_data/" + __addonid__ + "/" ) and elements[1].endswith( ".xsp" ):
                         xbmcvfs.delete( xbmc.translatePath( elements[1] ) )
+                        xbmcvfs.delete( xbmc.translatePath( elements[1].replace( ".xsp", "-randomversion.xsp" ) ) )                        
             except:
                 return
 
@@ -1790,7 +1841,6 @@ class LibraryFunctions():
         
         # First we will check that this is a playlist
         target = urllib.unquote( target )
-        log( repr( target ) )
         if target.startswith( "ActivateWindow(" ):
             try:
                 elements = target.split( "," )
@@ -1809,6 +1859,15 @@ class LibraryFunctions():
             # Write the tree
             DATA.indent( tree.getroot() )
             tree.write( filename, encoding="utf-8" )
+                    
+            # Load the random tree and change the name
+            tree = xmltree.parse( filename.replace( ".xsp", "-randomversion.xsp" ) )
+            name = tree.getroot().find( "name" )
+            name.text = newLabel
+            
+            # Write the random tree
+            DATA.indent( tree.getroot() )
+            tree.write( filename.replace( ".xsp", "-randomversion.xsp" ), encoding="utf-8" )
 
 class ShowDialog( xbmcgui.WindowXMLDialog ):
     def __init__( self, *args, **kwargs ):
